--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,11 @@ header h5 {
     border-radius: 5px;
 }
 
+.header-btn:hover {
+    background-color: darkslategrey;
+    cursor: pointer;
+}
+
 .create {
     width: 100%;
     height: 60px;
@@ -74,4 +79,38 @@ header h5 {
     font-family: Montserrat;
     font-size: 19px;
     font-weight: 500;
+}
+
+/* Doing Responsive */
+
+/* For mobile screen */
+
+
+@media screen and (max-width:576px) {
+    header h5{
+       padding-left: 30px;
+    }
+    .header {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .header-img {
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    .header-title{
+        font-size: 60px;
+    }
+    .header-content {
+        padding-top: 50px;
+        padding-left: 40px;
+    }
+    .hide{
+        display: none;
+    }
+    .button {
+        padding: 25px 0px 25px 0px;
+    }
 }
